--- a/chrome/injected/injected.css
+++ b/chrome/injected/injected.css
@@ -1,39 +1,169 @@
+/* cyrillic-ext */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr6DRAW_0.woff2) format('woff2');
+	unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr4TRAW_0.woff2) format('woff2');
+	unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* devanagari */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr5DRAW_0.woff2) format('woff2');
+	unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+}
+/* greek-ext */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr6TRAW_0.woff2) format('woff2');
+	unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr5jRAW_0.woff2) format('woff2');
+	unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr6jRAW_0.woff2) format('woff2');
+	unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr6zRAW_0.woff2) format('woff2');
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/notosans/v21/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+
+@font-face {
+	font-family: 'Material Icons';
+	font-style: normal;
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/materialicons/v114/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+}
+  
+.material-icons {
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;
+	line-height: 1;
+	letter-spacing: normal;
+	text-transform: none;
+	display: inline-block;
+	white-space: nowrap;
+	word-wrap: normal;
+	direction: ltr;
+	-webkit-font-feature-settings: 'liga';
+	-webkit-font-smoothing: antialiased;
+}
+
+
+
+
+
+
+
 #terse-icon {
 	display: inline-block !important;
 	background-image: url('chrome-extension://ofmkflgmpjcigcbfbopbfjbpfjadopcb/images/icon48x48.png');
 	background-repeat: no-repeat !important;
 	background-color: #fff0 !important;
 	background-position: right bottom !important;
-	border-radius: 0.5em !important;
 	padding: 1em !important;
-	height: 64px !important;
-	width: 64px !important;
 	position: fixed !important;
-	bottom: 3em !important;
-	right: 3em !important;
 	cursor: pointer;
-	opacity: 0.2 !important;
 	z-index: 999999 !important;
-	transition: 0.2s;
+	transition: 0.1s;
+
+	background-color: white !important;
+    opacity: 1 !important;
+    border-radius: 20px !important;
+    width: 32px !important;
+    height: 32px !important;
+    box-shadow: 0px 2px 11px -2px black;
+    bottom: 1em !important;
+    right: 1em !important;
 }
 #terse-icon * {
 	color: #333 !important;
 	font: initial !important;
 	font-size: 1em !important;
-	font-family: 'open sans',helvetica,arial !important;
+	/* font-family: 'open sans',helvetica,arial !important; */
+
+	font-family: 'Noto Sans', sans-serif !important;
 }
+
 #terse-icon h1 {
 	display: none !important;
 	border: 0 !important;
 	font-weight: bold !important;
 	margin: 0 !important;
 	padding: 0 !important;
+
+	opacity: 0 !important;
+}
+
+#terse-icon span {
+	/*font-family: 'Material Icons' !important;
+    font-size: 32px !important;*/
+	display: block !important;
+    text-align: center !important;
+    line-height: .75 !important;
+    font-weight: 600 !important;
+    font-size: 42px !important;
 }
 #terse-icon ul {
 	display: none !important;
 	margin: 1em !important;
 	padding: initial !important;
 }
+	#terse-icon ul li:not(:last-child) {
+		margin-bottom: 5px;
+	}
+
+terse-insight-subtitle {
+	display: none !important;
+}
+
 #terse-icon:hover {
 	opacity: 1 !important;
 	background: #ffff !important;
@@ -43,10 +173,78 @@
 	height: calc(50% - 3em) !important;
 	overflow: auto !important;
 	transition: 1s !important;
+
+	height: 75vh !important;
+    box-shadow: 0px 2px 11px -2px black;
+    border: 1px  solid #c3c3c3 !important;
+    border-radius: 20px !important;
+    padding: 2.5em !important;
 }
+
+#terse-icon:hover span {
+	display: none !important;
+}
+
 #terse-icon:hover h1 {
 	display: block !important;
+	z-index: 999;
+
+	opacity: 1 !important;
+	transition: all 2s ease !important;
+    position: absolute !important;
+    font-size: 42px !important;
+    font-weight: 100 !important;
+	margin-top: -10px !important;
+	white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    max-width: 40vw !important;
+	padding-left: 40px !important;
 }
+	#terse-icon:hover terse-bg::before {
+		display: block;
+		width: 150px;
+		height: 300px;
+		content: '';
+		background: #e1e1e1;
+		left: -100px;
+		top: -100px;
+		transform: rotate(45deg);
+		position: absolute;
+		z-index: 100;
+	}
+	#terse-icon:hover terse-bg::after {
+		content: 'Σ';
+		font-size: 120px;
+		position: absolute;
+		z-index: 1000;
+		opacity: 1;
+		top: -20px;
+		left: 20px;
+		/*color: #0000002b;*/
+		color: black !important;
+		font-weight: 600;
+	}
+
 #terse-icon:hover ul {
 	display: block !important;
+
+	margin-top: 30px !important;
+}
+
+#terse-icon:hover terse-insight-subtitle {
+	display: block !important;
+    /*margin-top: 55px !important;
+    margin-left: 50px !important;
+    font-size: 12px !important;*/
+    font-style: italic !important;
+
+	background: black !important;
+    height: 13px !important;
+    margin-left: 46px !important;
+    margin-top: 57px !important;
+    font-size: 10px !important;
+    font-weight: 100 !important;
+    line-height: 1.2 !important;
+	color: white !important;
 }
