--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -1,23 +1,3 @@
-button {
-  height: 30px;
-  width: 30px;
-  outline: none;
-  margin: 10px;
-  border: none;
-  border-radius: 2px;
-}
-
-button.current {
-  box-shadow: 0 0 0 2px white,
-              0 0 0 4px black;
-}
-
-
-
-
-
-
-
 /* cyrillic-ext */
 @font-face {
 	font-family: 'Noto Sans';
@@ -91,8 +71,6 @@ button.current {
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-
-
 @font-face {
 	font-family: 'Material Icons';
 	font-style: normal;
@@ -121,9 +99,12 @@ button.current {
 
 
 
-html {
-  width: 500px;
-  height: 500px;
+html, body {
+  width: 600px;
+  height: 400px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin: 0;
 }
 
 #terse-icon {
@@ -137,7 +118,7 @@ html {
   opacity: 1 !important;
   background: #ffff !important;
   cursor: default;
-  width: 500px !important;
+  width: 600px !important;
   overflow: auto !important;
   transition: 1s !important;
   padding: 2.5em !important;
@@ -162,12 +143,13 @@ html {
   position: absolute !important;
   font-size: 42px !important;
   font-weight: 100 !important;
-	margin-top: -10px !important;
 	white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   max-width: 400px !important;
-	padding-left: 40px !important;
+
+  padding-left: 65px !important;
+  margin-top: 0px !important;
 }
 
 #terse-icon ul {
@@ -175,6 +157,7 @@ html {
 	padding: initial !important;
   display: block !important;
 	margin-top: 30px !important;
+  width: 530px;
 }
 	#terse-icon ul li:not(:last-child) {
 		margin-bottom: 5px;
@@ -201,7 +184,7 @@ terse-insight-subtitle {
   z-index: 100;
 }
 #terse-icon terse-bg::after {
-  content: 'Σ';
+  content: attr(content-after);
   font-size: 120px;
   position: absolute;
   z-index: 1000;
@@ -217,10 +200,11 @@ terse-insight-subtitle {
   font-style: italic !important;
 	background: black !important;
   height: 13px !important;
-  margin-left: 46px !important;
-  margin-top: 57px !important;
+  margin-left: 56px !important;
+  margin-top: 67px !important;
   font-size: 10px !important;
   font-weight: 100 !important;
   line-height: 1.2 !important;
 	color: white !important;
+  width: 500px !important;
 }
