--- a/chrome/options/options.css
+++ b/chrome/options/options.css
@@ -1,13 +1,83 @@
-button {
-  height: 30px;
-  width: 30px;
-  outline: none;
-  margin: 10px;
-  border: none;
-  border-radius: 2px;
+* {
+  font-family: 'Noto sans', sans-serif !important;
 }
 
-button.current {
-  box-shadow: 0 0 0 2px white,
-              0 0 0 4px black;
+body {
+  padding: 40px;
+}
+
+bg {
+  position: fixed;
+  height: 500px;
+  width: 500px;
+  background: #e1e1e1;
+  transform: rotate(45deg);
+  top: -250px;
+  left: -250px;
+  z-index: 0;
+}
+
+body::before {
+  content:  'Σ';
+  position: absolute;
+  z-index: 1000;
+  opacity: 1;
+  left: 20px;
+  font-weight: 600;
+  z-index: 1 !important;
+  font-size: 400px !important;
+  top: -90px !important;
+  color: rgb(200,200,200);
+}
+
+#source {
+  position: absolute;
+  right: 80px;
+  top: 120px;
+  width: 35px;
+  height: 35px;
+  transform: scale(1.5);
+  opacity: 0.3;
+  display: inline-block;
+  z-index: 10;
+}
+    #source:hover {
+      opacity: 0.5;
+      transition: all .2s ease;
+    }
+
+object {
+  pointer-events: none;
+  display: inline-block;
+}
+
+svg {
+  position: relative; 
+  z-index: -1;
+}
+
+div.container {
+  position: relative;
+  z-index: 1;
+}
+
+h1 {
+  font-size: 100px;
+  margin: 0;
+  font-weight: 100;
+  font-style: italic;
+}
+
+h2 {
+  margin: 0;
+  font-size: 12px;
+  margin-left: 20px;
+  margin-top: -20px;
+}
+
+div.card {
+  background: rgba(255,255,255,0.7);
+  padding: 1em;
+  margin: 2em;
+  box-shadow: 0px 1px 15px -10px black;
 }
