--- a/chrome/injected/injected.css
+++ b/chrome/injected/injected.css
@@ -6,9 +6,9 @@
 	background-position: right bottom !important;
 	padding: 1em !important;
 	position: fixed !important;
-	cursor: pointer;
+	cursor: pointer !important;
 	z-index: 999999 !important;
-	transition: 0.1s;
+	transition: 0.1s !important;
 
 	box-sizing: content-box !important;
 	background-color: white !important;
@@ -16,7 +16,7 @@
     border-radius: 20px !important;
     width: 32px !important;
     height: 32px !important;
-    box-shadow: 0px 2px 11px -2px black;
+    box-shadow: 0px 2px 11px -2px black !important;
     bottom: 1em !important;
     right: 1em !important;
 }
@@ -24,10 +24,11 @@
 	color: #333 !important;
 	font: initial !important;
 	font-size: 1em !important;
+	line-height: initial !important;
 	font-family: 'Noto Sans', sans-serif !important;
 }
 
-#terse-icon h1 {
+#terse-icon terse-h1 {
 	display: none !important;
 	border: 0 !important;
 	font-weight: bold !important;
@@ -37,20 +38,20 @@
 	opacity: 0 !important;
 }
 
-#terse-icon span {
+#terse-icon terse-span {
 	display: block !important;
     text-align: center !important;
     line-height: .75 !important;
     font-weight: 600 !important;
     font-size: 42px !important;
 }
-#terse-icon ul {
+#terse-icon terse-ul {
 	display: none !important;
 	margin: 1em !important;
 	padding: initial !important;
 }
-	#terse-icon ul li:not(:last-child) {
-		margin-bottom: 5px;
+	#terse-icon terse-ul terse-li:not(:last-child) {
+		margin-bottom: 5px !important;
 	}
 
 terse-insight-subtitle {
@@ -61,33 +62,33 @@ terse-insight-subtitle {
 	opacity: 1 !important;
 	background: #ffff !important;
 	border: solid 1px #000 !important;
-	cursor: default;
+	cursor: default !important;
 	width: calc(50% - 3em) !important;
 	overflow: auto !important;
 	transition: 1s !important;
 
 	height: 75vh !important;
-    box-shadow: 0px 2px 11px -2px black;
+    box-shadow: 0px 2px 11px -2px black !important;
     border: 1px  solid #c3c3c3 !important;
     border-radius: 20px !important;
     padding: 2.5em !important;
 	min-width: 450px !important;
 }
 
-#terse-icon:hover span {
+#terse-icon:hover terse-span {
 	display: none !important;
 }
 
-#terse-icon:hover h1 {
+#terse-icon:hover terse-h1 {
 	display: block !important;
-	z-index: 999;
+	z-index: 999 !important;
 
 	opacity: 1 !important;
 	transition: all 2s ease !important;
     position: absolute !important;
     font-size: 42px !important;
     font-weight: 100 !important;
-	margin-top: -10px !important;
+	margin-top: -20px !important;
 	white-space: nowrap !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
@@ -95,33 +96,38 @@ terse-insight-subtitle {
 	padding-left: 40px !important;
 }
 	#terse-icon:hover terse-bg::before {
-		display: block;
-		width: 150px;
-		height: 300px;
-		content: '';
-		background: #e1e1e1;
-		left: -100px;
-		top: -100px;
-		transform: rotate(45deg);
-		position: absolute;
-		z-index: 100;
+		display: block !important;
+		width: 150px !important;
+		height: 300px !important;
+		content: '' !important;
+		background: #e1e1e1 !important;
+		left: -100px !important;
+		top: -100px !important;
+		transform: rotate(45deg) !important;
+		position: absolute !important;
+		z-index: 100 !important;
 	}
 	#terse-icon:hover terse-bg::after {
-		content: 'Σ';
-		font-size: 120px;
-		position: absolute;
-		z-index: 1000;
-		opacity: 1;
-		top: -20px;
-		left: 20px;
+		content: 'Σ' !important;
+		font-size: 120px !important;
+		position: absolute !important;
+		z-index: 1000 !important;
+		opacity: 1 !important;
+		top: -20px !important;
+		left: 20px !important;
 		color: black !important;
-		font-weight: 600;
+		font-weight: 600 !important;
 	}
 
-#terse-icon:hover ul {
+#terse-icon:hover terse-ul {
 	display: block !important;
-	list-style-type: circle !important;
+	list-style-type: disc !important;
 	margin-top: 30px !important;
+}
+
+terse-ul > terse-li {
+	display: list-item !important;
+	font-size: 18px !important;
 }
 
 #terse-icon:hover terse-insight-subtitle {
@@ -129,12 +135,12 @@ terse-insight-subtitle {
     font-style: italic !important;
 	background: black !important;
     height: 13px !important;
-    margin-left: 46px !important;
-    margin-top: 57px !important;
     font-size: 10px !important;
     font-weight: 100 !important;
     line-height: 1.2 !important;
 	color: white !important;
+	margin-left: 33px !important;
+    margin-top: 44px !important;
 }
 
 #terse-invalid-page {
