--- a/chrome/options/options.css
+++ b/chrome/options/options.css
@@ -161,6 +161,7 @@ div.card > span {
     .test-heading > a > span {
       font-size: 16px;
       font-weight: 600;
+      margin-top: -5px;
     }
 
   .test-heading > span.icon {
@@ -187,10 +188,13 @@ div.card > span {
 .test-content {
   background: rgba(100,100,100,0.1);
   padding: 20px;
+  padding-top: 5px;
+  border-top: 1px solid rgba(0,0,0,0.1);
 }
   .test-content.collapsed {
     height: 0px;
     padding: 0px;
+    border-top: 0px;
   }
     .test-content.collapsed > table {
       display: none;
@@ -199,4 +203,19 @@ div.card > span {
   .test-content > table {
     border-collapse: collapse;
     display: table;
+  }
+
+th {
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px;
+}
+td {
+  padding: 10px;    
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-top: 1px solid rgba(0,0,0,0.1)
+}
+  td.score, td.retrieved {
+    text-align: center;
   }
