--- a/chrome/options/options.css
+++ b/chrome/options/options.css
@@ -190,6 +190,8 @@ div.card > span {
   padding: 20px;
   padding-top: 5px;
   border-top: 1px solid rgba(0,0,0,0.1);
+  border-left: 1px solid rgba(0,0,0,0.1);
+  border-right: 1px solid rgba(0,0,0,0.1);
 }
   .test-content.collapsed {
     height: 0px;
