--- a/chrome/injected/injected.css
+++ b/chrome/injected/injected.css
@@ -1,4 +1,4 @@
-terse *, terse > *, terse#terse-icon *, terse, #terse-icon {
+terse, terse * {
     line-height: initial !important;
     font-weight: initial !important;
     font-size: initial !important;
@@ -6,16 +6,11 @@ terse *, terse > *, terse#terse-icon *, terse, #terse-icon {
 
 #terse-icon {
 	display: inline-block !important;
-	background-image: url('chrome-extension://ofmkflgmpjcigcbfbopbfjbpfjadopcb/images/icon48x48.png');
-	background-repeat: no-repeat !important;
-	background-color: #fff0 !important;
-	background-position: right bottom !important;
 	padding: 1em !important;
 	position: fixed !important;
 	cursor: pointer !important;
 	z-index: 999999 !important;
 	transition: 0.1s !important;
-
 	box-sizing: content-box !important;
 	background-color: white !important;
     opacity: 1 !important;
