minor refactoring, plus made settings work more like typical chrome extensions

--- a/chrome/injected/injected.css
+++ b/chrome/injected/injected.css
@@ -144,6 +144,6 @@ terse-ul > terse-li {
     margin-left: 46px !important;
 }
 
-#terse-invalid-page {
+terse-invalid-page {
 	display: none !important;
 }
