--- a/chrome/style.css
+++ b/chrome/style.css
@@ -1,4 +1,4 @@
-/* cyrillic-ext */
+﻿/* cyrillic-ext */
 @font-face {
 	font-family: 'Noto Sans';
 	font-style: normal;
@@ -93,3 +93,193 @@
 	-webkit-font-feature-settings: 'liga';
 	-webkit-font-smoothing: antialiased;
 }
+
+terse {
+	overflow: auto !important;
+}
+terse, terse * {
+	box-sizing: content-box !important;
+	border: 0 !important;
+	color: #333 !important;
+	cursor: default !important;
+	font: initial !important;
+	font-family: 'Noto Sans', sans-serif !important;
+	font-size: 1em !important;
+	line-height: initial !important;
+	opacity: 1 !important;
+	padding: 0 !important;
+	margin: 0 !important;
+}
+
+terse-invalid-page {
+	display: none !important;
+}
+
+terse-h1, terse-h2 {
+	display: block !important;
+	margin: 0 !important;
+	opacity: 1 !important;
+	overflow: hidden !important;
+	padding: 0 !important;
+	text-overflow: ellipsis !important;
+	transition: all 2s ease !important;
+	white-space: nowrap !important;
+	z-index: 999 !important;
+}
+
+terse-h1 {
+	font-size: 42px !important;
+	position: absolute !important;
+	top: 28px;
+	left: 74px;
+	right: 24px;
+}
+
+terse-h2 {
+	font-weight: bold !important;
+	margin: 1em 0 0.5em 0 !important;
+}
+
+	terse-h2:first-of-type {
+		margin-top: 92px !important;
+	}
+
+terse-insight-subtitle {
+	background: #000 !important;
+	border-radius: 3px !important;
+	color: #fff !important;
+	display: block !important;
+	font-size: 0.65em !important;
+	font-style: italic !important;
+	height: 14px !important;
+	line-height: 1.3 !important;
+	padding: 0 32px !important;
+	position: absolute !important;
+	top: 96px !important;
+	left: 23px !important;
+	right: 24px !important;
+	z-index: 2000 !important;
+}
+
+terse-bg {
+	display: block !important;
+	height: 140px !important;
+	overflow: hidden !important;
+	position: absolute !important;
+	top: 0 !important;
+	left: 0 !important;
+	right: 0 !important;
+}
+
+	terse-bg::before {
+		background: #e1e1e1 !important;
+		content: '' !important;
+		display: block !important;
+		position: absolute !important;
+		left: -100px !important;
+		top: -100px !important;
+		transform: rotate(45deg) !important;
+		width: 150px !important;
+		height: 300px !important;
+		z-index: 100 !important;
+	}
+
+	terse-bg::after {
+		color: black !important;
+		content: 'Σ' !important;
+		font-size: 120px !important;
+		font-weight: 600 !important;
+		opacity: 1 !important;
+		position: absolute !important;
+		top: -20px !important;
+		left: 20px !important;
+		z-index: 1000 !important;
+	}
+
+terse-span {
+	display: none !important;
+	text-align: center !important;
+	line-height: .75 !important;
+	font-weight: 600 !important;
+	font-size: 42px !important;
+}
+
+terse-topic-ul {
+	display: block !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+	terse-topic-ul terse-li {
+		background: #eee !important;
+		border-radius: 5px !important;
+		color: #555 !important;
+		display: inline-block !important;
+		font-size: 0.65em !important;
+		font-weight: bold !important;
+		list-style-type: none !important;
+		margin: 0.25em !important;
+		padding: 0.55em 0.75em !important;
+		text-transform: uppercase !important;
+	}
+	terse-topic-ul terse-li::after {
+		content: attr(data-count) !important;
+		border: initial !important;
+		border-left: 1px solid #ccc !important;
+		border-width: 1px !important;
+		color: #999 !important;
+		margin: 0 0 0 0.5em !important;
+		padding: 0 0 0 0.5em !important;
+	}
+
+terse-ul {
+	display: block !important;
+	list-style-type: disc !important;
+	margin-left: 2em !important;
+	padding: initial !important;
+}
+
+	terse-ul terse-li {
+		display: list-item !important;
+		font-size: 18px !important;
+	}
+
+		terse-ul terse-li:not(:last-child) {
+			margin-bottom: 5px !important;
+		}
+
+body:not(.terse-popup) terse {
+	background: #fff !important;
+	border-radius: 20px !important;
+	box-shadow: 0px 2px 11px -2px #000 !important;
+	display: inline-block !important;
+	padding: 1em !important;
+	position: fixed !important;
+	height: 32px !important;
+	width: 32px !important;
+	bottom: 1em !important;
+	right: 1em !important;
+	transition: 0.1s !important;
+	z-index: 999999 !important;
+}
+
+	body:not(.terse-popup) terse:not(:hover) terse-insight-subtitle,
+	body:not(.terse-popup) terse:not(:hover) terse-h1,
+	body:not(.terse-popup) terse:not(:hover) terse-h2,
+	body:not(.terse-popup) terse:not(:hover) terse-ul,
+	body:not(.terse-popup) terse:not(:hover) terse-topic-ul,
+	body:not(.terse-popup) terse:not(:hover) terse-bg {
+		display: none !important;
+	}
+
+	body:not(.terse-popup) terse:not(:hover) terse-span {
+		display: block !important;
+	}
+
+	body:not(.terse-popup) terse:hover {
+		height: 75vh !important;
+		padding: 2.5em !important;
+		min-width: 450px !important;
+		transition: 1s !important;
+		width: calc(50% - 3em) !important;
+	}
