--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -1,5 +1,5 @@
 html, body {
-    font: initial;
+    background-color: #fff;
     font-size: 16px;
     min-width: 550px;
     margin: 0;
@@ -8,4 +8,12 @@ html, body {
 body {
     overflow: scroll;
     padding: 2.5em;
+}
+
+.loader {
+    background-image: url(chrome-extension://__MSG_@@extension_id__/images/loader.gif);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 75px;
+    height: 200px;
 }
