--- a/chrome/options/options.css
+++ b/chrome/options/options.css
@@ -1,34 +1,27 @@
-* {
-  font-family: 'Noto sans', sans-serif !important;
-}
-
 body {
+  font-family: 'Noto sans', sans-serif;
   padding: 40px;
 }
-
-bg {
-  position: fixed;
-  height: 500px;
-  width: 500px;
-  background: #e1e1e1;
-  transform: rotate(45deg);
-  top: -250px;
-  left: -250px;
-  z-index: 0;
-}
-
-body::before {
-  content:  'Σ';
-  position: absolute;
-  z-index: 1000;
-  opacity: 1;
-  left: 20px;
-  font-weight: 600;
-  z-index: 1 !important;
-  font-size: 400px !important;
-  top: -90px !important;
-  color: rgb(200,200,200);
-}
+  body::before {
+    color: rgb(200,200,200);
+    content:  'Σ';
+    font-size: 400px !important;
+    font-weight: 600;
+    left: 20px;
+    position: absolute;
+    top: -90px !important;
+    z-index: 1;
+  }
+  body::after {
+    content: '';
+    position: fixed;
+    height: 500px;
+    width: 500px;
+    background: #e1e1e1;
+    transform: rotate(45deg);
+    top: -250px;
+    left: -250px;
+  }
 
 #source {
   position: absolute;
@@ -46,18 +39,11 @@ body::before {
       transition: all .2s ease;
     }
 
-object {
-  pointer-events: none;
-  display: inline-block;
-}
-
 svg {
-  position: relative; 
   z-index: -1;
 }
 
 div.container {
-  position: relative;
   z-index: 1;
 }
 
@@ -137,75 +123,6 @@ div.card > span {
   font-size: 18px;
   vertical-align: middle;
 }
-
-#tests {
-  padding: 10px;
-  padding-top: 0;
-}
-
-.test-heading {
-  background: rgba(0,0,0,0.1);
-  padding: 1em;
-  border: 1px solid rgba(0,0,0,0.1);
-  border-bottom: 0px;
-}
-  #tests > li:last-of-type > .test-heading {
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-  }
-  .test-heading > span {
-    font-size: 20px;
-  }
-  .test-heading > a {
-    margin-left: 5px;
-  }
-    .test-heading > a > span {
-      font-size: 16px;
-      font-weight: 600;
-      margin-top: -5px;
-    }
-
-  .test-heading > span.icon {
-    background-color: rgba(0,0,0,0.2);
-    transition: all .2s ease;
-    border-radius: 100%;
-    transform: rotate(90deg);
-    margin-top: -5px;
-  }
-  .test-heading > span.icon.collapsed {
-    transform: rotate(0deg);
-    transition: all .2s ease;
-  }
-  .test-heading > span.icon:hover {
-    background-color: rgba(0,0,0,0.3);
-    transition: all .2s ease;
-  }
-
-.test-results {
-  float: right;
-  font-size: 20px;
-}
-
-.test-content {
-  background: rgba(100,100,100,0.1);
-  padding: 20px;
-  padding-top: 5px;
-  border-top: 1px solid rgba(0,0,0,0.1);
-  border-left: 1px solid rgba(0,0,0,0.1);
-  border-right: 1px solid rgba(0,0,0,0.1);
-}
-  .test-content.collapsed {
-    height: 0px;
-    padding: 0px;
-    border-top: 0px;
-  }
-    .test-content.collapsed > table {
-      display: none;
-    }
-
-  .test-content > table {
-    border-collapse: collapse;
-    display: table;
-  }
 
 th {
   font-size: 16px;
