--- a/popup/popup.css
+++ b/popup/popup.css
@@ -10,7 +10,7 @@ body {
     padding: 2.5em;
 }
 
-.loader {
+.loading .loader {
     background-image: url(chrome-extension://__MSG_@@extension_id__/images/loader.gif);
     background-position: center center;
     background-repeat: no-repeat;
